Clean up query notebook text

--- a/portal/query.ipynb
+++ b/portal/query.ipynb
@@ -5,7 +5,7 @@
    "id": "da335f6d",
    "metadata": {},
    "source": [
-    "### This notebook was rendered using `query_url` = {{params.query_url}}\n"
+    "### This notebook was rendered using `query_url` = {{params.query_url}}"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "source": [
     "# Set parameters for testing\n",
     "# This code cell will be replaced by Times Square\n",
-    "query_url = 'https://rsp.example.com/api/tap/async/dummy_id'\n"
+    "query_url = 'https://rsp.example.com/api/tap/async/dummy_id'"
    ]
   },
   {
@@ -28,8 +28,9 @@
    "outputs": [],
    "source": [
     "from lsst.rsp import retrieve_query\n",
+    "\n",
     "# First, just get the AsyncTAPJob\n",
-    "query_data = retrieve_query(query_url)\n"
+    "query_data = retrieve_query(query_url)"
    ]
   },
   {
@@ -40,8 +41,7 @@
    "outputs": [],
    "source": [
     "# Now, convert that into a pandas DataFrame\n",
-    "from lsst.rsp import retrieve_query\n",
-    "query_df = query_data.fetch_result().to_table().to_pandas()\n"
+    "query_df = query_data.fetch_result().to_table().to_pandas()"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "# Display a preview of the pandas DataFrame\n",
-    "query_df\n"
+    "query_df"
    ]
   }
  ],
