Remove cell ID from cells; assigned at runtime

--- a/tutorials-on-demand/fetch.ipynb
+++ b/tutorials-on-demand/fetch.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3271b4b2-ca79-41e1-b06d-c73227f0ff78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +14,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7783db81-5504-4f33-b648-34a6f9347bff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +31,7 @@
     "nb.parent.mkdir(exist_ok=True)\n",
     "if nb.exists():\n",
     "    # Move extant notebook aside\n",
-    "    now = datetime.datetime.now(timezone.utc).isoformat()\n",
+    "    now = datetime.now(timezone.utc).isoformat()\n",
     "    nbdir = nb.parent\n",
     "    newname = Path(path).name + \"-\" + now + \".ipynb\"\n",
     "    nb.rename(nbdir / newname)\n",
