Add dummy cells for Times Square to use

--- a/tap/history.ipynb
+++ b/tap/history.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "da335f6d",
+   "metadata": {},
+   "source": [
+    "### This notebook was rendered without parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cfee3f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set parameters for testing\n",
+    "# This code cell will be replaced by Times Square\n",
+    "# There are no parameters to set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bf4b0ab6-2946-444b-a208-fe8821ea353a",
